=== Testimonials Widget ===

== Changelog ==

= trunk =
* Add PHP Copy and Paste Detector
* Add PHP run-time checks
* Add Travis CI with PHP Code Sniffer
* Add developer README and CONTRIBUTING docs
* Beta test update text
* BUGFIX DOM Element error on last testimonial rotation
* BUGFIX Testimonials Widget edit page doesn't display custom taxonomies
* Coding standards updates
* Create TODO doc
* Disabled PHP Mess Detector
* Don't escape already escaped text
* Don't load plugin till all are loaded
* FEATURE [Animated widget rotation](http://wordpress.org/support/topic/animate-jumpy-widget)
* Remove class from settings page link
* Revise API doc headings
* Update Filters listing to API document

= 2.12.8 =
* Add filter `testimonials_widget_cite_html` to adjust cite contents - Thank you [Dimitrios](http://visualweb.gr/) for the suggestion
* BUGFIX Warning: Illegal string offset 'exclude'
* Replace __ with esc_html__
* Update Premium features

= 2.12.7 =
* BUGFIX Link targets affected page navigation
* Removed donate monthly show code

= 2.12.6 =
* BUGFIX If no refresh_interval, then LIMIT 1
* Change donate from $1 to $2 due to fees
* Dashboard testimonials count statistics
* Display donate on major/minor version release or if it's been a month
* Remove braces from simple if/else structures
* Settings page inheritance note
* Update premium features listing
* Use donate button than text

= 2.12.5 =
* BUGFIX Correct loose vs strict comparison for intval and absint
* If no refresh_interval, then LIMIT 1

= 2.12.4 =
* BUGFIX Settings jQuery UI Tabs conflict
* NOT BUG [WPML bug](http://wordpress.org/support/topic/wpml-bug?replies=1)
* Remove settings.css
* Settings about section height fix
* TODOs update
* Update Premium product page URL
* Update WPML configuration
* Use PayPal donate image in settings

= 2.12.3 =
* BUGFIX Import option constantly overrides settings 